<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpendFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="Add New Spend"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="Enter the amount"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="Enter Description"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/etAmount"
        app:layout_constraintStart_toStartOf="@+id/etAmount"
        app:layout_constraintTop_toBottomOf="@+id/etAmount" />

    <Button
        android:id="@+id/btSpend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/etDescription"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/etDescription"
        app:layout_constraintTop_toBottomOf="@+id/etDescription"
        tools:text="Add Spend" />

    <TextView
        android:id="@+id/tvAddSpendStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="New spend add Successfully"
        android:textColor="@color/teal_200"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/btSpend"
        app:layout_constraintStart_toStartOf="@+id/btSpend"
        app:layout_constraintTop_toBottomOf="@+id/btSpend" />
</androidx.constraintlayout.widget.ConstraintLayout>